--- a/singleTypeOutputMatchSimulation/Properties/Resources.resx
+++ b/singleTypeOutputMatchSimulation/Properties/Resources.resx
@@ -124,4 +124,25 @@
   <data name="L_type_output_image_removebg_preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\L_type_output_image-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="_Naura__dual_output2" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\[Naura] dual output2.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_Naura__dual_output_3" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\[Naura] dual output 3.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_Naura__dual_output_4" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\[Naura] dual output 4.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_Naura__dual_output_4__" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\[Naura] dual output 4__.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_Naura__dual_output_4___" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\[Naura] dual output 4___.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_Naura__Dual_Output_image" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\[Naura] Dual Output image.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="_Naura__Dual_Output_image_removebg_preview" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\_Naura__Dual_Output_image-removebg-preview.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
 </root>
